cmake_minimum_required(VERSION 3.0...999999.0)

# # # # # # # # # # # # # # # # # # # # #
#        LU - SOCK_STREAM - UNIX        #
# # # # # # # # # # # # # # # # # # # # #

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - STANDARD +
add_executable(LU_SOCK_STREAM_UNIX_STANDARD_SENDER STANDARD/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_STANDARD_RECEIVER STANDARD/receiver.c)

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_RIGHTS +
add_executable(LU_SOCK_STREAM_UNIX_SCM_RIGHTS_SENDER CMSG/SCM_RIGHTS/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_SCM_RIGHTS_RECEIVER CMSG/SCM_RIGHTS/receiver.c)

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_TIMESTAMP -
add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMP_SENDER CMSG/SCM_TIMESTAMP/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMP_RECEIVER CMSG/SCM_TIMESTAMP/receiver.c)

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_CREDS +
add_executable(LU_SOCK_STREAM_UNIX_SCM_CREDS_SENDER CMSG/SCM_CREDS/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_SCM_CREDS_RECEIVER CMSG/SCM_CREDS/receiver.c)

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_BINTIME -
add_executable(LU_SOCK_STREAM_UNIX_SCM_BINTIME_SENDER CMSG/SCM_BINTIME/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_SCM_BINTIME_RECEIVER CMSG/SCM_BINTIME/receiver.c)

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_MONOTONIC -
add_executable(LU_SOCK_STREAM_UNIX_SCM_MONOTONIC_SENDER CMSG/SCM_MONOTONIC/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_SCM_MONOTONIC_RECEIVER CMSG/SCM_MONOTONIC/receiver.c)

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_REALTIME -
add_executable(LU_SOCK_STREAM_UNIX_SCM_REALTIME_SENDER CMSG/SCM_REALTIME/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_SCM_REALTIME_RECEIVER CMSG/SCM_REALTIME/receiver.c)

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_CREDS2 +
add_executable(LU_SOCK_STREAM_UNIX_SCM_CREDS2_SENDER CMSG/SCM_CREDS2/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_SCM_CREDS2_RECEIVER CMSG/SCM_CREDS2/receiver.c)
