cmake_minimum_required(VERSION 3.0...999999.0)

# # # # # # # # # # # # # # # # # # # # #
#        LU - SOCK_STREAM - UNIX        #
# # # # # # # # # # # # # # # # # # # # #

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - STANDARD +
add_executable(LU_SOCK_STREAM_UNIX_STANDARD_SENDER STANDARD/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_STANDARD_RECEIVER STANDARD/receiver.c)

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_RIGHTS +
add_executable(LU_SOCK_STREAM_UNIX_SCM_RIGHTS_SENDER CMSG/SCM_RIGHTS/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_SCM_RIGHTS_RECEIVER CMSG/SCM_RIGHTS/receiver.c)

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_TIMESTAMP -
add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMP_SENDER CMSG/SCM_TIMESTAMP/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMP_RECEIVER CMSG/SCM_TIMESTAMP/receiver.c)

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_CREDENTIALS +
add_executable(LU_SOCK_STREAM_UNIX_SCM_CREDENTIALS_SENDER CMSG/SCM_CREDENTIALS/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_SCM_CREDENTIALS_RECEIVER CMSG/SCM_CREDENTIALS/receiver.c)

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_TIMESTAMPING -
add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMPING_SENDER CMSG/SCM_TIMESTAMPING/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMPING_RECEIVER CMSG/SCM_TIMESTAMPING/receiver.c)

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_TIMESTAMPNS -
add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMPNS_SENDER CMSG/SCM_TIMESTAMPNS/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMPNS_RECEIVER CMSG/SCM_TIMESTAMPNS/receiver.c)

# Add compile options for Linux
target_compile_definitions(LU_SOCK_STREAM_UNIX_SCM_CREDENTIALS_SENDER PRIVATE _GNU_SOURCE)
target_compile_definitions(LU_SOCK_STREAM_UNIX_SCM_CREDENTIALS_RECEIVER PRIVATE _GNU_SOURCE)
