cmake_minimum_required(VERSION 3.0...999999.0)

# # # # # # # # # # # # # # # # # # # # #
#   INET6 - SOCK_STREAM - IPPROTO_TCP   #
# # # # # # # # # # # # # # # # # # # # #

# INET6 - SOCK_STREAM - IPPROTO_TCP - STANDARD +
add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_STANDARD_SENDER STANDARD/sender.c)
add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_STANDARD_RECEIVER STANDARD/receiver.c)

# INET6 - SOCK_STREAM - IPPROTO_TCP - SCM_TIMESTAMP -
add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_SENDER CMSG/SCM_TIMESTAMP/sender.c)
add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_RECEIVER CMSG/SCM_TIMESTAMP/receiver.c)

# INET6 - SOCK_STREAM - IPPROTO_TCP - SCM_TIMESTAMP_MONOTONIC -
add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_MONOTONIC_SENDER CMSG/SCM_TIMESTAMP_MONOTONIC/sender.c)
add_executable(INET6_SOCK_STREAM_IPPROTO_TCP_SCM_TIMESTAMP_MONOTONIC_RECEIVER CMSG/SCM_TIMESTAMP_MONOTONIC/receiver.c)
