cmake_minimum_required(VERSION 3.0...999999.0)

# # # # # # # # # # # # # # # # # # # # #
#        LU - SOCK_STREAM - UNIX        #
# # # # # # # # # # # # # # # # # # # # #

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - STANDARD +
add_executable(LU_SOCK_STREAM_UNIX_STANDARD_SENDER STANDARD/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_STANDARD_RECEIVER STANDARD/receiver.c)

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_RIGHTS +
add_executable(LU_SOCK_STREAM_UNIX_SCM_RIGHTS_SENDER CMSG/SCM_RIGHTS/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_SCM_RIGHTS_RECEIVER CMSG/SCM_RIGHTS/receiver.c)

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_TIMESTAMP -
add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMP_SENDER CMSG/SCM_TIMESTAMP/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMP_RECEIVER CMSG/SCM_TIMESTAMP/receiver.c)

# LOCAL/UNIX - SOCK_STREAM - F_UNIX - SCM_TIMESTAMP_MONOTONIC -
add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMP_MONOTONIC_SENDER CMSG/SCM_TIMESTAMP_MONOTONIC/sender.c)
add_executable(LU_SOCK_STREAM_UNIX_SCM_TIMESTAMP_MONOTONIC_RECEIVER CMSG/SCM_TIMESTAMP_MONOTONIC/receiver.c)